compiler/testData/diagnostics/tests/varargs/varargIterator.kt
package test

class CompositeIterator<T>(vararg iterators: <!PLATFORM_CLASS_MAPPED_TO_KOTLIN!>java.util.Iterator<T><!>){
    konst iteratorsIter = iterators.iterator()
}